# solana-trustpilot

./: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
.github/: .env  file-filters.yml
clients/js/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/js/src/: plugin.ts
clients/js/test/: _setup.ts  createDomain.test.ts  deleteReview.test.ts  demo.test.ts  getProgram.test.ts  updateReview.test.ts  writeReview.test.ts
configs/: kinobi.cjs  shank.cjs  validator.cjs
configs/program-scripts/: dump.sh
idls/: loris_trustpilot.json
programs/loris-trustpilot/: Cargo.toml  README.md
programs/loris-trustpilot/src/: assertions.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
programs/loris-trustpilot/tests/: create.rs  create_domain.rs
