[package]
name = "loris-trustpilot"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[dependencies]
solana-program = "~1.16.6"
shank = "0.2.0"
borsh = "0.10.3"
thiserror = "~1.0"
num-derive = "0.3.3"
num-traits = "~0.2"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "~1.16.6"
solana-sdk = "~1.16.6"

[lib]
crate-type = ["cdylib", "lib"]
